fix bug:前端显示错误，后端获取用户的接口
